--- a/www/css/wemedia.css
+++ b/www/css/wemedia.css
@@ -327,9 +327,11 @@ a {
         padding: 10px;
         margin: 5px;
         min-width: 280px; }
-        .dashboard .new-media-list-wrap .new-media-list .item .header-img img {
-          max-height: 60px;
-          max-width: 60px; }
+        .dashboard .new-media-list-wrap .new-media-list .item .header-img {
+          min-width: 60px; }
+          .dashboard .new-media-list-wrap .new-media-list .item .header-img img {
+            max-height: 60px;
+            max-width: 60px; }
         .dashboard .new-media-list-wrap .new-media-list .item .media-info {
           margin-left: 10px;
           font-size: 14px; }
@@ -344,9 +346,13 @@ a {
             right: 0;
             width: 20px;
             height: 20px;
-            display: inline-block; }
+            display: inline-block;
+            background-repeat: no-repeat;
+            background-size: 100%; }
             .dashboard .new-media-list-wrap .new-media-list .item .media-info .media-icon.weibo {
               background-image: url(/img/weibo.jpg); }
+            .dashboard .new-media-list-wrap .new-media-list .item .media-info .media-icon.weixin {
+              background-image: url(/img/icon_weixin.png); }
           .dashboard .new-media-list-wrap .new-media-list .item .media-info .detail-wrap {
             position: relative;
             min-width: 180px; }
