--- a/scss/precontract.scss
+++ b/scss/precontract.scss
@@ -85,4 +85,29 @@
   }
 }
 
+.pre-detail-wrap{
+  .info-table{
+    border: 1px solid #ddd;
+  }
+  .td-title{
+    background-color: #e4e4e4;
+  }
+  .total-info-wrap{
+    height: 40px;
+    line-height: 40px;
+    border: 1px solid #ddd;
+    background-color: #f7f7f7;
+    margin-bottom: 10px;
+    color: black;
+    padding-left: 5px;
+    span{
+      color: $main-there-color;
+    }
+  }
 
+   .blue-line {
+     th{
+       border-bottom: 1px solid #088fc8;
+     }
+   }
+}
