--- a/www/css/wemedia.css
+++ b/www/css/wemedia.css
@@ -59,6 +59,9 @@ a {
 .border {
   border: solid 1px #E4E4E4; }
 
+.font-color {
+  color: #088FC8; }
+
 .main-nav {
   padding-top: 10px;
   background-color: #fff; }
@@ -707,6 +710,23 @@ a {
   .choose-resource-layer .data-list-wrap .selected-list {
     max-height: 450px;
     overflow: auto; }
+
+.pre-detail-wrap .info-table {
+  border: 1px solid #ddd; }
+.pre-detail-wrap .td-title {
+  background-color: #e4e4e4; }
+.pre-detail-wrap .total-info-wrap {
+  height: 40px;
+  line-height: 40px;
+  border: 1px solid #ddd;
+  background-color: #f7f7f7;
+  margin-bottom: 10px;
+  color: black;
+  padding-left: 5px; }
+  .pre-detail-wrap .total-info-wrap span {
+    color: #088FC8; }
+.pre-detail-wrap .blue-line th {
+  border-bottom: 1px solid #088fc8; }
 
 .user-center .line-wrap {
   border: solid 1px #E4E4E4; }
